# godwit-sdk

./: .clang-format  .gitignore  .gitmodules  .rgignore  LICENSE  README.md  format.sh  meson.build
.github/workflows/: build.yml
Games/game1/: main.cpp  meson.build  winmain.c
Games/game1/include/: main.h
Games/lava/: camera.cpp  cells.cpp  main.cpp  meson.build
Games/lava/include/: camera.hpp  celliter.hpp  cells.hpp  griditer.hpp  simrule.hpp  state.hpp
SDK-Core/: meson.build
SDK-Core/include/: godwit.hpp  rl.h
SDK-Core/include/godwit/: drawmode.hpp  types.hpp
SDK-Core/src/: godwit.cpp
engine/: meson.build
engine/include/engine/: camera.h  engine.h  raylib.h  render.h  renderables.h  resource.h
engine/src/: engine.cpp  raylib.cpp  renderables.cpp
game/game1/: main.cpp  meson.build
games/game1/: main.cpp  meson.build
games/game1/include/: main.h
games/simulation/: meson.build
games/simulation/src/: grid.cpp  grid.hpp  griditer.hpp  main.cpp  rules.hpp  systems.cpp  systems.hpp
sdk/: godwit.cpp  meson.build
sdk/godwit/: godwit.hpp
sdk/include/: godwit.h
sdk/src/: godwit.cpp  util.cpp
